--- a/FinalProject/style.css
+++ b/FinalProject/style.css
@@ -9,7 +9,7 @@
 */
 @font-face{font-family: dash;src:url(fonts/dash.ttf);}
 @font-face{font-family: gregorian;src:url(fonts/gregorian.ttf);}
-@font-face{font-family: slant;src:url(slant.ttf);}
+@font-face{font-family: slant;src:url(/slant.ttf);}
 
 html, body{
 	font-family:slant;
