--- a/FinalProject/style.css
+++ b/FinalProject/style.css
@@ -9,7 +9,7 @@
 */
 /* @font-face{font-family: dash;src:url(fonts/dash.ttf);} */
 /* @font-face{font-family: gregorian;src:url(fonts/gregorian.ttf);} */
-@font-face{font-family: slant;src:url('FinalProject/slant.TTF');}
+@font-face{font-family: slant;src:url('/FinalProject/slant.TTF');}
 
 html, body{
 	font-family:slant;
